--- a/new html y css/menu.html
+++ b/new html y css/menu.html
@@ -51,28 +51,28 @@
         <h3>Producto 1</h3>
         <p class="precio-original">S/ 50.00</p>
         <p class="precio-descuento">S/ 35.00</p>
-        <button>Comprar</button>
+        <button>Carrito</button>
       </div>
       <div class="producto">
         <img src="producto2.jpg" alt="Producto 2">
         <h3>Producto 2</h3>
         <p class="precio-original">S/ 120.00</p>
         <p class="precio-descuento">S/ 90.00</p>
-        <button>Comprar</button>
+        <button>Carrito</button>
       </div>
       <div class="producto">
         <img src="producto3.jpg" alt="Producto 3">
         <h3>Producto 3</h3>
         <p class="precio-original">S/ 70.00</p>
         <p class="precio-descuento">S/ 50.00</p>
-        <button>Comprar</button>
+        <button>Carrito</button>
       </div>
       <div class="producto">
         <img src="producto4.jpg" alt="Producto 4">
         <h3>Producto 4</h3>
         <p class="precio-original">S/ 100.00</p>
         <p class="precio-descuento">S/ 80.00</p>
-        <button>Comprar</button>
+        <button>Carrito</button>
       </div>
     </div>
   </section>
