--- a/ChatBotPrueba/chtacito.html
+++ b/ChatBotPrueba/chtacito.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="chat-container">
-    <img id="avatar" src="avatars/normal.png" alt="Avatar">
+    <img id="avatar" src="avatars/avatar.png" alt="Avatar">
     <div id="chat-box"></div>
     <input type="text" id="user-input" placeholder="Escribe algo...">
     <button onclick="responder()">Enviar</button>
